<resources>
    <string name="app_name">HEALTHPLUS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <string name="hint_email">Email</string>
    <string name="hint_userid">UserId</string>
    <string name="hint_newpassword">New Password</string>
    <string name="hint_change">UPDATE</string>
    <string name="hint_retypepassword">Retype Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="my_profile">My Profile</string>
    <string name="my_appointment">My Appointment</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="Welcome">WELCOME</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_report_history">My Details</string>
    <string name="nav_appt_history">Appointment History</string>
    <string name="nav_search_doctor">Find a doctor</string>
    <string name="nav_feedback">Cancel Appointment</string>
    <string name="nav_about_us">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Details</item>
        <item>Appointments</item>
        <item>Doctors</item>
        <item>Feedback</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
