<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_report_history"

            android:title="@string/nav_report_history" />
        <item
            android:id="@+id/nav_appt_history"
            android:title="@string/nav_appt_history" />

        <item
            android:id="@+id/nav_search_doctor"
            android:title="@string/nav_search_doctor" />

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/nav_feedback" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
